# python-moodle

./: .env.example  .gitattributes  404.html  AGENTS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  example_script.py  example_script_with_progressbar.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.json  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/assign/: index.html
api/auth/: index.html
api/category/: index.html
api/client/: index.html
api/course/: index.html
api/doctor/: index.html
api/draftfile/: index.html
api/ensure/: index.html
api/folder/: index.html
api/http/: index.html
api/label/: index.html
api/models/: index.html
api/module/: index.html
api/page/: index.html
api/resource/: index.html
api/scorm/: index.html
api/section/: index.html
api/session/: index.html
api/settings/: index.html
api/transport/: index.html
api/upload/: index.html
api/url/: index.html
api/user/: index.html
cli/: index.html
development/: index.html
docs/: development.md  examples.md  recipes.md  roadmap-plan.md  troubleshooting.md
docs/api/: assign.md  auth.md  category.md  client.md  course.md  doctor.md  draftfile.md  ensure.md  folder.md  http.md  label.md  models.md  module.md  page.md  resource.md  scorm.md  section.md  session.md  settings.md  transport.md  upload.md  url.md  user.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: index.html
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
recipes/: index.html
roadmap-plan/: index.html
search/: search_index.json
src/py_moodle/: __init__.py  auth.py  client.py  compat.py  config.py  course.py  doctor.py  draftfile.py  ensure.py  folder.py  http.py  models.py  module.py  permissions.py  scorm.py  session.py  site.py  upload.py  url.py  user.py
stylesheets/: extra.css
tests/: conftest.py  test_assign.py  test_compat.py  test_course.py  test_draftfile.py  test_folder.py  test_page.py  test_permissions.py  test_resource.py  test_section.py  test_site.py  test_url.py
tests/unit/: test_auth_logging.py  test_cli_courses_delete.py  test_cli_fields.py  test_cli_output_formats.py  (+17 more)
troubleshooting/: index.html
(+19 files in other folders)
